--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Sarah Connell
 
 # Short bio or description (displayed in the header)
-description: A description of you
+description: A test site for testing
 
 # URL of your avatar or profile pic
 avatar: https://raw.githubusercontent.com/[yourusername]/[yourusername].github.io/master/images/[filename].jpg
